# bloom

./: Cargo.toml  Dioxus.toml  flake.nix  rust-analyzer.toml
.cargo/: config.toml
assets/: main.css
scripts/: make_banner_atlas.sh
src/: db.rs  main.rs  sound.rs  state.rs
src/bannerfont/: banner_code.rs  banner_font.rs  color.rs  mod.rs  pattern.rs
src/components/: banner.rs  data.rs  keyboard.rs  mod.rs  settings.rs  tooltip.rs  widget_button.rs  widget_slider.rs  writing.rs
