[package]
name = "bloom"
version = "0.1.0"
authors = ["Wei Wen Goh <goweiwen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
wasm-bindgen = "=0.2.118" # pin to version nixpkgs `dioxus-cli` expects

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
