cargo-features = ["panic-immediate-abort"]

[package]
name = "bloom"
version = "0.1.0"
authors = ["Wei Wen Goh <goweiwen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
num_enum = "0.7.6"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
wasm-bindgen = "=0.2.118" # pin to version nixpkgs `dioxus-cli` expects
js-sys = "0.3.95"
web-sys = { version = "0.3.95", features = [
    "HtmlAudioElement",
    "HtmlMediaElement",
    "Window",
    "Navigator",
    "Clipboard",
    "MouseEvent",
    "UiEvent",
    "DragEvent",
    "Element",
    "Node",
    "NodeList",
    "DomRect",
] }
rexie = "0.6"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
test-case = "3.3.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
